--- a/config/workload.yaml
+++ b/config/workload.yaml
@@ -16,6 +16,7 @@ spec:
         branch: main
   params:
     - name: api_descriptor
+      label: v1
       value:
         type: openapi
         location:
