changed tag to lover case

--- a/catalog/catalog-info.yaml
+++ b/catalog/catalog-info.yaml
@@ -6,7 +6,7 @@ metadata:
   tags:
     - python
     - fastapi
-    - API
+    - api
   links:
     - url: http://fastapi-test.default.tanzu.dk
       title: Base Url
