--- a/catalog/catalog-info.yaml
+++ b/catalog/catalog-info.yaml
@@ -21,3 +21,14 @@ spec:
   lifecycle: experimental
   owner: default-team
   system: demo
+---
+apiVersion: backstage.io/v1alpha1
+kind: System
+metadata:
+  name: demo
+  description: Demo Application
+  annotations:
+    "backstage.io/techdocs-ref": dir:.
+spec:
+  owner: default-team
+  domain: cloud-apps
