--- a/config/workload.yaml
+++ b/config/workload.yaml
@@ -8,10 +8,6 @@ metadata:
     apis.apps.tanzu.vmware.com/register-api: "true"
   annotations:
     autoscaling.knative.dev/minScale: "1"
-  links:
-    - url: http://fastapi-test.default.tanzu.dk
-      title: Base URL
-      icon: dashboard
 spec:
   source:
     git:
@@ -27,3 +23,8 @@ spec:
         system: fastapi-test
         owner: default-team
         description: "A set of API endpoints to manage the resources within fastapi test."
+      metadata:
+        links:
+          - url: http://fastapi-test.default.tanzu.dk
+            title: Base URL
+            icon: dashboard
