--- a/config/workload.yaml
+++ b/config/workload.yaml
@@ -2,10 +2,6 @@ apiVersion: carto.run/v1alpha1
 kind: Workload
 metadata:
   name: fastapi-test
-  links:
-    - url: http://fastapi-test.default.tanzu.dk
-      title: Base URL
-      icon: dashboard
   labels:
     apps.tanzu.vmware.com/workload-type: web
     app.kubernetes.io/part-of: fastapi-accelerator
@@ -24,6 +20,6 @@ spec:
         type: openapi
         location:
           path: "/openapi.json"
-        system: fastapi-test
-        owner: default-team
+        system: demo
+        owner: team-a
         description: "A set of API endpoints to manage the resources within fastapi test."
