--- a/config/workload.yaml
+++ b/config/workload.yaml
@@ -6,6 +6,7 @@ metadata:
     apps.tanzu.vmware.com/workload-type: web
     app.kubernetes.io/part-of: fastapi-accelerator
     apis.apps.tanzu.vmware.com/register-api: "true"
+    apps.tanzu.vmware.com/has-tests: "true"
   annotations:
     autoscaling.knative.dev/minScale: "1"
 spec:
@@ -21,5 +22,5 @@ spec:
         location:
           path: "/openapi.json"
         system: demo
-        owner: team-a
+        owner: denmark-team
         description: "A set of API endpoints to manage the resources within fastapi test."
